refactor: add more projects, new blog, format

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,141 +1,315 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
 
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="../css/styles.css">
-        <title>Projects | Bharati</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="../css/styles.css" />
+		<title>Projects | Bharati</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700&family=Ubuntu&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700&family=Ubuntu&display=swap"
+			rel="stylesheet"
+		/>
 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+		<link
+			rel="shortcut icon"
+			href="/images/favicon_io/favicon.ico"
+			type="image/x-icon"
+		/>
 
-        <link rel="shortcut icon" href="/images/favicon_io/favicon.ico" type="image/x-icon">
-    </head>
-    <body class="light-theme">
-        <div id="body-wrapper">
-            <header class="header container">
-                <nav class="navbar flex-container flex-row justify-space-between align-center">
-                    <a  href="/" class="logo-link"><h1 class="logo flex-container flex-row justify-center align-center">BS</h1></a>
-                    <button class="display-none navlinks-toggle">
-                        <span class="hamburger"></span>
-                    </button>
-                    <ul class="navlinks flex-container flex-row justify-center align-center">
-                        <li>
-                            <a href="/" class="navlink">Home</a>
-                        </li>
-                        <!-- <li>
-                            <a href="#about" class="navlink">About</a>
-                        </li> -->
-                        <li>
-                            <a href="/projects/" class="active-link navlink">Projects</a>
-                        </li>
-                        <li>
-                            <a href="/blogs/" class="navlink">Blogs</a>
-                        </li>
-                    </ul>
-                    <label class="theme-toggler" for="theme-checkbox">
-                        <input type="checkbox" name="theme-checkbox" id="theme-checkbox">
-                        <h1 class="theme-toggle flex-container flex-row justify-center align-center">
-                            <i class="fas fa-moon"></i>
-                        </h1>
-                    </label>
-                </nav>
-                
-            </header>
-            <main class="projects-main main">
-               <section class="projects container" id="projects">
-                    <h1 class="hero-text text-center">
-                        <strong>
-                            My Projects
-                        </strong>
-                    </h1>
-                   <ol class="list-style-none project-list-container">
-                       <li class="project project-todo flex-container flex-column justify-center align-start">
-                            <h2 class="lead-text">Todo List App</h2>
-                           <div class="project-image">
-                            <img src="./images/todp-app.PNG" alt="">
-                           </div>
-                           <div class="project-content">
-                               
-                               <p class="section-text"></p>
-                               <a href="./todo-list" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
-                           </div>
-                       </li>
-                       <li class="project project-weather-app flex-container flex-column justify-center align-start">
-                            <h2 class="lead-text">Weather App</h2>
-                            <div class="project-image">
-                                <img src="./images/weather-app.PNG" alt="">
-                            </div>
-                            <div class="project-content">
-                                <p class="section-text"></p>
-                                <a href="./weather-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
-                            </div>
-                        </li>
-                        <li class="project project-weather-app flex-container flex-column justify-center align-start">
-                            <h2 class="lead-text">Calculator App</h2>
-                            <div class="project-image">
-                                <img src="./images/calculator-app.PNG" alt="">
-                            </div>
-                            <div class="project-content">
-                                <p class="section-text"></p>
-                                <a href="./calculator-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
-                            </div>
-                        </li>
-                        <li class="project project-weather-app flex-container flex-column justify-center align-start">
-                            <h2 class="lead-text">Play With Triangles</h2>
-                            <div class="project-image">
-                                <img src="./images/play-with-triangles-app.PNG" alt="">
-                            </div>
-                            <div class="project-content">
-                                <p class="section-text"></p>
-                                <a href="./play-with-triangles" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
-                            </div>
-                        </li>
-                    </ol>
-               </section>
-            </main>
-        </div>
-        <footer class="footer container" id="footer">
-            <div class="footer-container flex-container justify-space-between flex-row align-center">
-                <p class="flex-item author">
-                    <a href="/">Bharati Subramanian</a>
-                </p>
-                <ul class="social-links flex-container flex-row align-center justify-center">
-                    <li class="flex-item social-link">
-                        <a href="https://github.com/bharati-21" target="_blank">
-                           <i class="fab fa-github"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" target="_blank">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://twitter.com/_girlwhocodes" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://dev.to/bharati21" target="_blank">
-                            <i class="fab fa-dev"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:bharatisharada@gmail.com" target="_blank">
-                            <i class="fas fa-envelope"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+		<script
+			src="https://kit.fontawesome.com/8af1815f18.js"
+			crossorigin="anonymous"
+		></script>
+	</head>
+	<body class="light-theme">
+		<div id="body-wrapper">
+			<header class="header container">
+				<nav
+					class="navbar flex-container flex-row justify-space-between align-center"
+				>
+					<a href="/" class="logo-link"
+						><h1
+							class="logo flex-container flex-row justify-center align-center"
+						>
+							BS
+						</h1></a
+					>
+					<button class="display-none navlinks-toggle">
+						<span class="hamburger"></span>
+					</button>
+					<ul
+						class="navlinks flex-container flex-row justify-center align-center"
+					>
+						<li>
+							<a href="/" class="navlink">Home</a>
+						</li>
+						<li>
+							<a href="/projects/" class="active-link navlink"
+								>Projects</a
+							>
+						</li>
+						<li>
+							<a href="/blogs/" class="navlink">Blogs</a>
+						</li>
+					</ul>
+					<label class="theme-toggler" for="theme-checkbox">
+						<input
+							type="checkbox"
+							name="theme-checkbox"
+							id="theme-checkbox"
+						/>
+						<h1
+							class="theme-toggle flex-container flex-row justify-center align-center"
+						>
+							<i class="fa-solid fa-moon"></i>
+						</h1>
+					</label>
+				</nav>
+			</header>
+			<main class="projects-main main">
+				<section class="projects container" id="projects">
+					<h1 class="hero-text text-center">
+						<strong> My Projects </strong>
+					</h1>
+					<ol class="list-style-none project-list-container">
+						<li
+							class="project project-bookery-ecommerce flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">
+								ReadersSpace- Social Media App
+							</h2>
+							<div class="project-image">
+								<img
+									src="./images/readers-space-social-app.PNG"
+									alt="ReadersSpace social library app"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./social-media-app"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-bookery-ecommerce flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Bookery- E-commerce App</h2>
+							<div class="project-image">
+								<img
+									src="./images/bookery-ecommerce-app.PNG"
+									alt="bookery ecommerce app"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./bookery-ecommerce-app"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-bookery-ecommerce flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">
+								StreamTunes- Video Library App
+							</h2>
+							<div class="project-image">
+								<img
+									src="./images/stream-tunes-video-lib-app.PNG"
+									alt="StreamTunes Video library app"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./video-library-app/"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-inscribe-notes flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Inscribe - Notes App</h2>
+							<div class="project-image">
+								<img
+									src="./images/inscribe-notes-app.PNG"
+									alt="inscribe notes app"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./inscribe-notes-app"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-component-library flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">
+								Elixir UI Component Library
+							</h2>
+							<div class="project-image">
+								<img
+									src="./images/component-library.PNG"
+									alt="component library docs"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./component-library"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-todo flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Todo List App</h2>
+							<div class="project-image">
+								<img src="./images/todp-app.PNG" alt="" />
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./todo-list"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-weather-app flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Weather App</h2>
+							<div class="project-image">
+								<img src="./images/weather-app.PNG" alt="" />
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./weather-app"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-weather-app flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Calculator App</h2>
+							<div class="project-image">
+								<img src="./images/calculator-app.PNG" alt="" />
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./calculator-app"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+						<li
+							class="project project-weather-app flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">Play With Triangles</h2>
+							<div class="project-image">
+								<img
+									src="./images/play-with-triangles-app.PNG"
+									alt=""
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./play-with-triangles"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
+					</ol>
+				</section>
+			</main>
+		</div>
+		<footer class="footer container" id="footer">
+			<div
+				class="footer-container flex-container justify-space-between flex-row align-center"
+			>
+				<p class="flex-item author">
+					<a href="/">Bharati Subramanian</a>
+				</p>
+				<ul
+					class="social-links flex-container flex-row align-center justify-center"
+				>
+					<li class="flex-item social-link">
+						<a href="https://github.com/bharati-21" target="_blank">
+							<i class="fa-brands fa-github"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a
+							href="https://www.linkedin.com/in/bharati-subramanian-29734b152/"
+							target="_blank"
+						>
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a
+							href="https://twitter.com/_bhaaratii"
+							target="_blank"
+						>
+							<i class="fa-brands fa-twitter"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a href="https://dev.to/bharati21" target="_blank">
+							<i class="fa-brands fa-dev"></i>
+						</a>
+					</li>
+					<li>
+						<a
+							href="mailto:bharatisharada@gmail.com"
+							target="_blank"
+						>
+							<i class="fa-solid fa-envelope"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 
-        <script src="../script.js"></script>
-    </body>
+		<script src="../script.js"></script>
+	</body>
 </html>
