--- a/projects/play-with-triangles/index.html
+++ b/projects/play-with-triangles/index.html
@@ -14,9 +14,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700&family=Ubuntu&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
         <link rel="shortcut icon" href="/images/favicon_io/favicon.ico" type="image/x-icon">
+
+        <script
+			src="https://kit.fontawesome.com/8af1815f18.js"
+			crossorigin="anonymous"
+		></script>
     </head>
     <body class="light-theme">
         <div id="body-wrapper">
@@ -30,9 +33,6 @@
                         <li>
                             <a href="/" class="navlink">Home</a>
                         </li>
-                        <!-- <li>
-                            <a href="#about" class="navlink">About</a>
-                        </li> -->
                         <li>
                             <a href="/projects/" class="active-link navlink">Projects</a>
                         </li>
@@ -43,7 +43,7 @@
                     <label class="theme-toggler" for="theme-checkbox">
                         <input type="checkbox" name="theme-checkbox" id="theme-checkbox">
                         <h1 class="theme-toggle flex-container flex-row justify-center align-center">
-                            <i class="fas fa-moon"></i>
+                            <i class="fa-solid fa-moon"></i>
                         </h1>
                     </label>
                 </nav>
@@ -93,13 +93,13 @@
                             <div class="project-live-link">
                                 <h2 class="article-head">Project Live</h2>
                                 <a href="https://bharati-play-with-triangles.netlify.app/" target="_blank" class="btn btn-primary project-live-link">
-                                    <i class="fas fa-external-link-alt"></i>
+                                    <i class="fa-solid fa-external-link-alt"></i>
                                 </a>
                             </div>
                             <div class="project-repo-link">
                                 <h2 class="article-head">Project Repository</h2>
                                 <a href="https://github.com/bharati-21/play-with-triangles/" target="_blank" class="btn btn-secondary project-github-link">
-                                    <i class="fab fa-github"></i>
+                                    <i class="fa-brands fa-github"></i>
                                 </a>
                             </div>
                         </div>
@@ -124,53 +124,57 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- <div class="project-future">
-                            <h2 class="lead-text">
-                                Project Future
-                            </h2>
-                            <p class="section-text">
-                                In the future, this project could be changed to view, add, filter, complete, and edit tasks day wise. To add a due date could be another extension as well. <br />
-                                Another extension could be allowing users to add a comment for 
-                            </p>
-                        </div> -->
                     </article>
                </section>
             </main>
         </div>
         <footer class="footer container" id="footer">
-            <div class="footer-container flex-container justify-space-between flex-row align-center">
-                <p class="flex-item author">
-                    <a href="/">Bharati Subramanian</a>
-                </p>
-                <ul class="social-links flex-container flex-row align-center justify-center">
-                    <li class="flex-item social-link">
-                        <a href="https://github.com/bharati-21" target="_blank">
-                           <i class="fab fa-github"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" target="_blank">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://twitter.com/_girlwhocodes" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://dev.to/bharati21" target="_blank">
-                            <i class="fab fa-dev"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:bharatisharada@gmail.com" target="_blank">
-                            <i class="fas fa-envelope"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+			<div
+				class="footer-container flex-container justify-space-between flex-row align-center"
+			>
+				<p class="flex-item author">
+					<a href="/">Bharati Subramanian</a>
+				</p>
+				<ul
+					class="social-links flex-container flex-row align-center justify-center"
+				>
+					<li class="flex-item social-link">
+						<a href="https://github.com/bharati-21" target="_blank">
+							<i class="fa-brands fa-github"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a
+							href="https://www.linkedin.com/in/bharati-subramanian-29734b152/"
+							target="_blank"
+						>
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a
+							href="https://twitter.com/_bhaaratii"
+							target="_blank"
+						>
+							<i class="fa-brands fa-twitter"></i>
+						</a>
+					</li>
+					<li class="social-link">
+						<a href="https://dev.to/bharati21" target="_blank">
+							<i class="fa-brands fa-dev"></i>
+						</a>
+					</li>
+					<li>
+						<a
+							href="mailto:bharatisharada@gmail.com"
+							target="_blank"
+						>
+							<i class="fa-solid fa-envelope"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 
         <script src="/script.js"></script>
     </body>
