--- a/projects/social-media-app/index.html
+++ b/projects/social-media-app/index.html
@@ -21,17 +21,15 @@
 		/>
 
 		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-			integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-			crossorigin="anonymous"
-		/>
-
-		<link
 			rel="shortcut icon"
 			href="/images/favicon_io/favicon.ico"
 			type="image/x-icon"
 		/>
+
+		<script
+			src="https://kit.fontawesome.com/8af1815f18.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body class="light-theme">
 		<div id="body-wrapper">
@@ -83,37 +81,61 @@
 					class="projects container project-main-description"
 					id="projects"
 				>
-					<h1 class="hero-text text-center">
-						<strong> My Todo List </strong>
+					<h1 class="hero-text">
+						<strong>ReadersSpace- Social Media App</strong>
 					</h1>
 					<article class="project-description-container">
 						<p class="section-text project-description">
-							My to-do list allows users to add, edit, delete and
-							set tasks for the day. Additionally, users can also
-							choose to complete the tasks by clicking the
-							<i class="fa-solid fa-check-circle"></i> icon. As a
-							design feature, users can toggle between light and
-							dark modes as well. Other functionality includes-
-							filtering and clearing to-dos from the list. The
-							to-do list items are stored so that users don't lose
-							out on their tasks and progress!
+							ReadersSpace is a social media app designed and
+							developed for readers to discover fellow readers and
+							new books. With a Twitter like experience, users can
+							create, update or delete posts. They can include
+							emjois or an image to the posts as well. The explore
+							and user feed have an enhanced use experience using
+							<strong>infinite loader</strong>. Users can also
+							add, delete, edit, and view comments on any posts.
+							Users can add posts to/ remove posts from bookmarks.
+						</p>
+						<p class="section-text project-description">
+							Discover other users either by the suggestions
+							sidebar or by searching via the search bar. The
+							search bar is optimised using
+							<strong>debouncing</strong> and matches for
+							username, or names are displayed. User can view
+							others' profile and edit their own profile to update
+							information. Additional feature includes theme
+							toggle and responsiveness
 						</p>
 						<div class="project-image">
-							<img src="../images/todp-app.PNG" alt="" />
+							<img
+								src="../images/readers-space-social-app.PNG"
+								alt="Inscribe Notes app"
+							/>
 						</div>
 						<div class="project-details">
 							<div class="project-techstack">
 								<h2 class="article-head">Tech Stack</h2>
 								<ul>
-									<li>HTML</li>
-									<li>CSS</li>
-									<li>JavaScript</li>
+									<li>React</li>
+									<li>Redux Toolkit</li>
+									<li>React Router DOM v6</li>
+									<li>TailwindCSS</li>
+									<li>
+										Mock backend with
+										<a
+											href="https://mockbee.netlify.app/"
+											target="_blank"
+											class="secondary-color"
+											>mockBee</a
+										>
+									</li>
+									<li>React Toastify</li>
 								</ul>
 							</div>
 							<div class="project-live-link">
 								<h2 class="article-head">Project Live</h2>
 								<a
-									href="https://javascript-my-todo-list.netlify.app/"
+									href="http://readers-space.netlify.app/"
 									target="_blank"
 									class="btn btn-primary project-live-link"
 								>
@@ -125,7 +147,7 @@
 							<div class="project-repo-link">
 								<h2 class="article-head">Project Repository</h2>
 								<a
-									href="https://github.com/bharati-21/javascript-todo"
+									href="https://github.com/bharati-21/readers-space"
 									target="_blank"
 									class="btn btn-secondary project-github-link"
 								>
@@ -135,33 +157,42 @@
 						</div>
 						<div class="project-learnings">
 							<h2 class="lead-text">Project Learnings</h2>
-							<p class="section-text">
-								The major takeaway from this project was
-								<strong
-									>splitting the problems into
-									sub-problems</strong
-								>. And using the subproblems to build a
-								complete, working to-do list from all the
-								components. Event delegation was another concept
-								I got to learn and use in this project.
-								Managing, adding, clearing local storage was
-								learning.
-							</p>
+							<ul class="section-text">
+								<li>
+									Optimised search performance using
+									debouncing.
+								</li>
+								<li>
+									Enhanced user experience with frontend
+									infinite loader using IntersectionObserver.
+								</li>
+								<li>
+									Using Cloudinary to store and fetch images.
+								</li>
+								<li>
+									Discovering TailwindCSS features and utility
+									classes.
+								</li>
+							</ul>
 						</div>
 						<div class="project-challenges">
 							<h2 class="lead-text">Project Challenges</h2>
 							<ul class="section-text">
 								<li>
-									Designing the overall application was
-									incredibly challenging. Taking into account
-									responsiveness across all devices was one of
-									the major goals for this project.
+									Reusing posts container on all pages and
+									also including comments on the single post
+									view page. Solved this challenge by using
+									useOutletContext.
 								</li>
 								<li>
-									Editing a previously added to-do item was
-									another challenge. More so, to change the
-									same to-do item from the local storage as
-									well.
+									Adding outside click features for all
+									dropdowns, modals, and popups.
+								</li>
+								<li>
+									Using Redux to maintain states displaying a
+									modal. Solved this by using a single slice
+									that contains information about the state of
+									modal and which modal is currently open.
 								</li>
 							</ul>
 						</div>
