--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 						<div
 							class="buttons-container showcase-buttons flex-container align-center justify-center"
 						>
+							<!-- RESUME LINK -->
 							<a
 								href="https://drive.google.com/file/d/1nxx3YCfUshwIz7zLX4BSkfndJdUTJnX5/view?usp=sharing"
 								target="_blank"
