--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-
+		<meta name="author" content="Bharati Subramanian" />
+		<meta name="description" content="Portfolio website of Bharati Subramanian" />
+		<meta name="keywords" content="portfolio, personal website, Bharati Subramanian" />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Bharati Subramanian</title>
 
