feat: add quizardry app to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -81,8 +81,30 @@
 						<strong> My Projects </strong>
 					</h1>
 					<ol class="list-style-none project-list-container">
+                        <li
+							class="project project-quizardry-quiz flex-container flex-column justify-center align-start"
+						>
+							<h2 class="lead-text">
+								Quizardry- Quiz App
+							</h2>
+							<div class="project-image">
+								<img
+									src="./images/quizardry-app.png"
+									alt="Quizardry quiz app image"
+								/>
+							</div>
+							<div class="project-content">
+								<p class="section-text"></p>
+								<a
+									href="./quizardry-app/"
+									class="btn btn-primary primary"
+									>View More
+									<i class="fa-solid fa-chevron-right"></i
+								></a>
+							</div>
+						</li>
 						<li
-							class="project project-bookery-ecommerce flex-container flex-column justify-center align-start"
+							class="project project-readers-space-social-media flex-container flex-column justify-center align-start"
 						>
 							<h2 class="lead-text">
 								ReadersSpace- Social Media App
@@ -124,7 +146,7 @@
 							</div>
 						</li>
 						<li
-							class="project project-bookery-ecommerce flex-container flex-column justify-center align-start"
+							class="project project-stream-tunes-video-library flex-container flex-column justify-center align-start"
 						>
 							<h2 class="lead-text">
 								StreamTunes- Video Library App
