refactor: update backend, tech stack

--- a/projects/bookery-ecommerce-app/index.html
+++ b/projects/bookery-ecommerce-app/index.html
@@ -99,7 +99,7 @@
 						<div class="project-image">
 							<img
 								src="../images/bookery-ecommerce-app.PNG"
-								alt=""
+								alt="bookery-ecommerce app image"
 							/>
 						</div>
 						<div class="project-details">
@@ -116,15 +116,9 @@
 											>Elixir UI component library</a
 										>
 									</li>
-									<li>
-										Mock backend with
-										<a
-											href="https://mockbee.netlify.app/"
-											target="_blank"
-											class="secondary-color"
-											>mockBee</a
-										>
-									</li>
+									<li>Node.js</li>
+									<li>Express.js</li>
+									<li>MongoDB</li>
 								</ul>
 							</div>
 							<div class="project-live-link">
@@ -155,8 +149,8 @@
 							<p class="section-text">
 								Keeping in mind nuances of UI and enhances the
 								user experience was a major takeaway. Creating
-								mock backend controllers and making API calls
-								was also a major learning.
+								server controllers and making API calls was also
+								a major learning.
 							</p>
 						</div>
 						<div class="project-challenges">
