refactor: update img alt attribute

--- a/projects/calculator-app/index.html
+++ b/projects/calculator-app/index.html
@@ -53,9 +53,6 @@
 						<li>
 							<a href="/" class="navlink">Home</a>
 						</li>
-						<!-- <li>
-                            <a href="#about" class="navlink">About</a>
-                        </li> -->
 						<li>
 							<a href="/projects/" class="active-link navlink"
 								>Projects</a
@@ -100,7 +97,7 @@
 							well.
 						</p>
 						<div class="project-image">
-							<img src="../images/calculator-app.PNG" alt="" />
+							<img src="../images/calculator-app.PNG" alt="Calculator app image" />
 						</div>
 						<div class="project-details">
 							<div class="project-techstack">
