--- a/projects/component-library/index.html
+++ b/projects/component-library/index.html
@@ -96,7 +96,7 @@
 							development faster.
 						</p>
 						<div class="project-image">
-							<img src="../images/component-library.PNG" alt="" />
+							<img src="../images/component-library.PNG" alt="Component library image" />
 						</div>
 						<div class="project-details">
 							<div class="project-techstack">
