--- a/projects/inscribe-notes-app/index.html
+++ b/projects/inscribe-notes-app/index.html
@@ -101,7 +101,7 @@
 						<div class="project-image">
 							<img
 								src="../images/inscribe-notes-app.PNG"
-								alt="Inscribe Notes app"
+								alt="Inscribe Notes app image"
 							/>
 						</div>
 						<div class="project-details">
