--- a/projects/play-with-triangles/index.html
+++ b/projects/play-with-triangles/index.html
@@ -79,7 +79,7 @@
 
                         </p>
                         <div class="project-image">
-                            <img src="../images/play-with-triangles-app.PNG" alt="">
+                            <img src="../images/play-with-triangles-app.PNG" alt="Play with triangles image">
                         </div>
                         <div class="project-details">
                             <div class="project-techstack">
