--- a/projects/social-media-app/index.html
+++ b/projects/social-media-app/index.html
@@ -109,7 +109,7 @@
 						<div class="project-image">
 							<img
 								src="../images/readers-space-social-app.PNG"
-								alt="Inscribe Notes app"
+								alt="ReadersSpace app image"
 							/>
 						</div>
 						<div class="project-details">
