--- a/projects/todo-list/index.html
+++ b/projects/todo-list/index.html
@@ -99,7 +99,7 @@
 							out on their tasks and progress!
 						</p>
 						<div class="project-image">
-							<img src="../images/todp-app.PNG" alt="" />
+							<img src="../images/todp-app.PNG" alt="Todo app image" />
 						</div>
 						<div class="project-details">
 							<div class="project-techstack">
