--- a/projects/video-library-app/index.html
+++ b/projects/video-library-app/index.html
@@ -103,7 +103,7 @@
 						<div class="project-image">
 							<img
 								src="../images/stream-tunes-video-lib-app.PNG"
-								alt="StreamTunes video library app"
+								alt="StreamTunes video library app image"
 							/>
 						</div>
 						<div class="project-details">
