--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -101,7 +101,7 @@
 							Celcius units.
 						</p>
 						<div class="project-image">
-							<img src="../images/weather-app.PNG" alt="" />
+							<img src="../images/weather-app.PNG" alt="Weather app image" />
 						</div>
 						<div class="project-details">
 							<div class="project-techstack">
