refactor: quizardry app img src

--- a/projects/quizardry-app/index.html
+++ b/projects/quizardry-app/index.html
@@ -99,7 +99,7 @@
 						</p>
 						<div class="project-image">
 							<img
-								src="../images/quizardry-app.PNG"
+								src="../images/quizardry-app.png"
 								alt="Quizardry app image"
 							/>
 						</div>
